--- a/BookingAppStore/Views/Home/Index.cshtml
+++ b/BookingAppStore/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
             <th><p>Название книги</p></th>
             <th><p>Автор</p></th>
             <th><p>Цена</p></th>
+            <th></th>
         </tr>
         @foreach (var b in ViewBag.Books)
         {
@@ -18,6 +19,7 @@
                 <td><p>@b.Name</p></td>
                 <td><p>@b.Author</p></td>
                 <td><p>@b.Price</p></td>
+                <td><p>@Html.RouteLink("Купить", new { controller="Home", action="Buy", id=b.Id})</p></td>
             </tr>
         }
     </table>
