--- a/BookingAppStore/Views/Home/GetBook.cshtml
+++ b/BookingAppStore/Views/Home/GetBook.cshtml
@@ -1,13 +1,15 @@
-﻿
+﻿@model BookingAppStore.Models.Book
+
 @{
     ViewBag.Title = "GetBook";
 }
 
-<form method="post">
-    <p>Введите название книги: </p>
-    <input type="text" name="title" value="" />
-    <p>Введите автора: </p>
-    <input type="text" name="author" id="" />
-    <input type="submit" value="Отправить" />
+<h2>GetBook</h2>
 
-</form>
+@Html.DisplayFor(m => m.Name) <br />
+@Html.DisplayFor(m => m.Author) <br/>
+@Html.DisplayFor(m => m.Price) <br />
+
+                               <br />
+                               <hr />
+@Html.DisplayForModel()
